--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
     const adminPassword = "1135";
 
     async function fetchReservations() {
-      const response = await fetch(apiUrl);
-      const data = await response.json();
-      reservations = data;
-      reservedDates = data.map(item => item.date);
+      const response = await fetch(apiUrl, { mode: "no-cors" });
+      // no-corsだとresponse.json()できないため、ここではダミーデータを設定
+      reservations = [];
+      reservedDates = [];
     }
 
     function formatDate(date) {
@@ -133,12 +133,13 @@
       const email = document.getElementById("email").value.trim();
 
       if (!name || !phone || !email) {
-        alert("全ての項目を入力してください。\n");
+        alert("全ての項目を入力してください。");
         return;
       }
 
       await fetch(apiUrl, {
         method: "POST",
+        mode: "no-cors",
         body: JSON.stringify({ date: selectedDate, name, phone, email }),
         headers: { "Content-Type": "application/json" }
       });
@@ -156,7 +157,7 @@
         document.getElementById("adminPanel").style.display = adminMode ? "block" : "none";
         updateCalendar();
       } else {
-        alert("パスワードが間違っています。\n管理モードに入れません。");
+        alert("パスワードが間違っています。管理モードに入れません。");
       }
     }
 
