--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div id="reservationInstructions">
     <h2>予約の手順</h2>
     <ol>
-      <li>カレンダーで予約したい日付を選択してください（○の日付）。</li>
+      <li>カレンダーで予約したい日付を選択してください（〇の日付）。</li>
       <li>予約フォームにお名前、電話番号、メールアドレスを入力してください。</li>
       <li>「予約を確定する」ボタンをクリックしてください。</li>
       <li>ご入力いただいたメールまたは電話番号に確定連絡をいたします。</li>
@@ -39,7 +39,7 @@
 
   <div class="admin-toggle">
     <button onclick="toggleAdminMode()">管理モード切り替え</button>
-    <input type="password" id="adminPass" placeholder="管理パスワード（4桑）" maxlength="4">
+    <input type="password" id="adminPass" placeholder="管理パスワード（4桁）" maxlength="4">
     <span id="adminStatus">現在: 通常モード</span>
   </div>
 
@@ -62,7 +62,7 @@
     <input type="tel" id="phone" placeholder="電話番号" required>
     <input type="email" id="email" placeholder="メールアドレス" required>
     <button onclick="submitReservation()">予約を確定する</button>
-    <p class="notice">＊こちらの予約は仮予約となります。予約の確定につきましては登録いただいたメールアドレスもしくは電話番号対応に連絡をいたします。</p>
+    <p class="notice">※こちらの予約は仮予約となります。予約の確定につきましては登録いただいたメールアドレスもしくは電話番号宛に連絡をいたします。</p>
   </div>
 
   <script>
@@ -74,9 +74,14 @@
     const adminPassword = "1135";
 
     async function fetchReservations() {
-      await fetch(apiUrl, { mode: "no-cors" });
-      reservations = [];
-      reservedDates = [];
+      try {
+        const response = await fetch(apiUrl);
+        const data = await response.json();
+        reservations = data;
+        reservedDates = data.map(item => item.date);
+      } catch (error) {
+        console.error("予約情報の取得に失敗しました:", error);
+      }
     }
 
     async function generateCalendar(year, month) {
@@ -97,7 +102,7 @@
           cell.style.cursor = "default";
           cell.onclick = null;
         } else {
-          cell.innerHTML = `${i + 1}日<br><span class="clickable">○</span>`;
+          cell.innerHTML = `${i + 1}日<br><span class="clickable">〇</span>`;
           cell.style.cursor = "pointer";
           cell.onclick = () => {
             selectedDate = formatted;
@@ -110,13 +115,6 @@
       }
 
       if (adminMode) updateReservationList();
-    }
-
-    function updateCalendar() {
-      const year = parseInt(document.getElementById("year").value);
-      const month = parseInt(document.getElementById("month").value);
-      document.getElementById("reservationForm").style.display = "none";
-      generateCalendar(year, month);
     }
 
     async function submitReservation() {
