--- a/index.html
+++ b/index.html
@@ -65,124 +65,151 @@
     <p class="notice">※こちらの予約は仮予約となります。予約の確定につきましては登録いただいたメールアドレスもしくは電話番号宛に連絡をいたします。</p>
   </div>
 
-  <script>
-    const apiUrl = "https://script.google.com/macros/s/AKfycbzvbBhNLLoUeFlF8DFj-Dv43jakC3nSiKlZSM3NjqoTyLK-H6iiArR4pldeek3KY-t0/exec";
-    let reservedDates = [];
-    let reservations = [];
-    let selectedDate = null;
-    let adminMode = false;
-    const adminPassword = "1135";
+<script>
+  const apiUrl = "https://script.google.com/macros/s/AKfycbzvbBhNLLoUeFlF8DFj-Dv43jakC3nSiKlZSM3NjqoTyLK-H6iiArR4pldeek3KY-t0/exec";
+  let reservedDates = [];
+  let reservations = [];
+  let selectedDate = null;
+  let adminMode = false;
+  const adminPassword = "1135";
 
-    async function fetchReservations() {
-      try {
-        const response = await fetch(apiUrl);
-        const data = await response.json();
-        reservations = data;
-        reservedDates = data.map(item => item.date);
-      } catch (error) {
-        console.error("予約情報の取得に失敗しました:", error);
+  async function fetchReservations() {
+    try {
+      const response = await fetch(apiUrl);
+      if (!response.ok) {
+        throw new Error('Network response was not ok');
       }
+      const data = await response.json();
+      reservations = data;
+      reservedDates = data.map(item => item.date);
+    } catch (error) {
+      console.error('予約情報の取得に失敗しました:', error);
+      throw error;
+    }
+  }
+
+  function formatDate(date) {
+    const offset = date.getTimezoneOffset() * 60000;
+    const localISOTime = new Date(date - offset).toISOString();
+    return localISOTime.split('T')[0];
+  }
+
+  async function generateCalendar(year, month) {
+    await fetchReservations();
+    const table = document.getElementById("calendar");
+    table.innerHTML = "";
+    const date = new Date(year, month - 1, 1);
+    const daysInMonth = new Date(year, month, 0).getDate();
+
+    let row = table.insertRow();
+    for (let i = 0; i < date.getDay(); i++) {
+      row.insertCell();
     }
 
-    async function generateCalendar(year, month) {
-      await fetchReservations();
-      const table = document.getElementById("calendar");
-      table.innerHTML = "";
+    for (let i = 1; i <= daysInMonth; i++) {
+      if (row.cells.length >= 7) {
+        row = table.insertRow();
+      }
+      const cell = row.insertCell();
+      const currentDate = new Date(year, month - 1, i);
+      const formatted = formatDate(currentDate);
 
-      const daysInMonth = new Date(year, month, 0).getDate();
-
-      let row = table.insertRow();
-      for (let i = 0; i < daysInMonth; i++) {
-        const formatted = `${year}-${String(month).padStart(2, '0')}-${String(i + 1).padStart(2, '0')}`;
-        const cell = row.insertCell();
-
-        if (reservedDates.includes(formatted)) {
-          cell.innerHTML = `${i + 1}日<br><span class="reserved">×</span>`;
-          cell.style.color = "red";
-          cell.style.cursor = "default";
-          cell.onclick = null;
-        } else {
-          cell.innerHTML = `${i + 1}日<br><span class="clickable">〇</span>`;
-          cell.style.cursor = "pointer";
+      if (reservedDates.includes(formatted)) {
+        cell.innerHTML = `${i}日<br><span class="reserved">×</span>`;
+        cell.classList.add("reserved-cell");
+      } else {
+        cell.innerHTML = `${i}日<br><span class="clickable">〇</span>`;
+        if (!adminMode) {
           cell.onclick = () => {
             selectedDate = formatted;
             document.getElementById("reservationForm").style.display = "block";
             document.getElementById("selectedDateDisplay").innerText = `選択した日付: ${formatted}`;
           };
         }
-
-        if ((i + 1) % 7 === 0) row = table.insertRow();
       }
-
-      if (adminMode) updateReservationList();
     }
 
-    async function submitReservation() {
-      const name = document.getElementById("name").value.trim();
-      const phone = document.getElementById("phone").value.trim();
-      const email = document.getElementById("email").value.trim();
+    if (adminMode) {
+      updateReservationList();
+    }
+  }
 
-      if (!name || !phone || !email) {
-        alert("全ての項目を入力してください。");
-        return;
-      }
+  function updateCalendar() {
+    const year = parseInt(document.getElementById("year").value);
+    const month = parseInt(document.getElementById("month").value);
+    document.getElementById("reservationForm").style.display = "none";
+    generateCalendar(year, month);
+  }
 
+  async function submitReservation() {
+    const name = document.getElementById("name").value.trim();
+    const phone = document.getElementById("phone").value.trim();
+    const email = document.getElementById("email").value.trim();
+
+    if (!name || !phone || !email) {
+      alert("全ての項目を入力してください。");
+      return;
+    }
+
+    try {
       await fetch(apiUrl, {
         method: "POST",
-        mode: "no-cors",
         body: JSON.stringify({ date: selectedDate, name, phone, email }),
         headers: { "Content-Type": "application/json" }
       });
-
       alert("予約完了しました！");
       document.getElementById("reservationForm").style.display = "none";
       generateCalendar(parseInt(document.getElementById("year").value), parseInt(document.getElementById("month").value));
+    } catch (error) {
+      console.error('予約送信に失敗しました:', error);
+      alert("予約に失敗しました。\n再度お試しください。");
     }
+  }
 
-    function toggleAdminMode() {
-      const inputPass = document.getElementById("adminPass").value;
-      if (inputPass === adminPassword) {
-        adminMode = !adminMode;
-        document.getElementById("adminStatus").innerText = adminMode ? "現在: 管理モード" : "現在: 通常モード";
-        document.getElementById("adminPanel").style.display = adminMode ? "block" : "none";
-        updateCalendar();
-      } else {
-        alert("パスワードが間違っています。\n管理モードに入れません。");
-      }
+  function toggleAdminMode() {
+    const inputPass = document.getElementById("adminPass").value;
+    if (inputPass === adminPassword) {
+      adminMode = !adminMode;
+      document.getElementById("adminStatus").innerText = adminMode ? "現在: 管理モード" : "現在: 通常モード";
+      document.getElementById("adminPanel").style.display = adminMode ? "block" : "none";
+      updateCalendar();
+    } else {
+      alert("パスワードが間違っています。\n管理モードに入れません。");
     }
+  }
 
-    function updateReservationList() {
-      const list = document.getElementById("reservationList");
-      list.innerHTML = "";
-      reservations.forEach(res => {
-        const item = document.createElement("li");
-        item.textContent = `${res.date} - ${res.name}（${res.phone}, ${res.email}）`;
-        list.appendChild(item);
-      });
+  function updateReservationList() {
+    const list = document.getElementById("reservationList");
+    list.innerHTML = "";
+    reservations.forEach(res => {
+      const item = document.createElement("li");
+      item.textContent = `${res.date} - ${res.name}（${res.phone}, ${res.email}）`;
+      list.appendChild(item);
+    });
+  }
+
+  function initSelectors() {
+    const monthSelect = document.getElementById("month");
+    const yearSelect = document.getElementById("year");
+    for (let m = 1; m <= 12; m++) {
+      const option = document.createElement("option");
+      option.value = m;
+      option.text = `${m}月`;
+      monthSelect.appendChild(option);
     }
-
-    function initSelectors() {
-      const monthSelect = document.getElementById("month");
-      const yearSelect = document.getElementById("year");
-      for (let m = 1; m <= 12; m++) {
-        const option = document.createElement("option");
-        option.value = m;
-        option.text = `${m}月`;
-        monthSelect.appendChild(option);
-      }
-      const thisYear = new Date().getFullYear();
-      for (let y = thisYear - 1; y <= thisYear + 2; y++) {
-        const option = document.createElement("option");
-        option.value = y;
-        option.text = `${y}年`;
-        yearSelect.appendChild(option);
-      }
-      monthSelect.value = 4;
-      yearSelect.value = 2025;
+    const thisYear = new Date().getFullYear();
+    for (let y = thisYear - 1; y <= thisYear + 2; y++) {
+      const option = document.createElement("option");
+      option.value = y;
+      option.text = `${y}年`;
+      yearSelect.appendChild(option);
     }
+    monthSelect.value = 4;
+    yearSelect.value = 2025;
+  }
 
-    initSelectors();
-    generateCalendar(2025, 4);
-  </script>
+  initSelectors();
+  generateCalendar(2025, 4);
+</script>
 </body>
 </html>
