--- a/index.html
+++ b/index.html
@@ -3,198 +3,66 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>予約カレンダー</title>
+  <title>予約フォーム</title>
   <style>
     body { font-family: sans-serif; padding: 20px; }
-    table { border-collapse: collapse; width: 100%; margin-bottom: 20px; }
-    th, td { border: 1px solid #ccc; text-align: center; padding: 10px; }
-    .clickable { cursor: pointer; color: blue; }
-    .reserved { color: red; pointer-events: none; }
-    .form-container { display: none; margin-bottom: 20px; }
-    .form-container input { display: block; margin: 5px 0; }
-    .admin-toggle { margin-bottom: 20px; }
-    .admin-panel { display: none; border: 1px solid #ccc; padding: 10px; margin-bottom: 20px; }
-    .notice { font-size: 0.9em; color: #666; margin-top: 10px; }
-    @media (max-width: 600px) {
-      table, th, td { font-size: 12px; padding: 5px; }
-      .form-container input, .admin-toggle input { width: 100%; font-size: 14px; }
-      .admin-toggle, .admin-panel, button { font-size: 14px; }
-      button { padding: 8px 12px; }
-    }
+    input, button { display: block; margin: 10px 0; padding: 8px; font-size: 16px; width: 100%; max-width: 400px; }
+    label { margin-top: 10px; font-weight: bold; }
+    .notice { margin-top: 20px; font-size: 0.9em; color: #666; }
   </style>
 </head>
 <body>
-  <h1>予約カレンダー</h1>
-  <div id="reservationInstructions">
-    <h2>予約の手順</h2>
-    <ol>
-      <li>カレンダーで予約したい日付を選択してください（〇の日付）。</li>
-      <li>予約フォームにお名前、電話番号、メールアドレスを入力してください。</li>
-      <li>「予約を確定する」ボタンをクリックしてください。</li>
-      <li>ご入力いただいたメールまたは電話番号に確定連絡をいたします。</li>
-    </ol>
-  </div>
+  <h1>予約フォーム</h1>
 
-  <div class="admin-toggle">
-    <button onclick="toggleAdminMode()">管理モード切り替え</button>
-    <input type="password" id="adminPass" placeholder="管理パスワード（4桁）" maxlength="4">
-    <span id="adminStatus">現在: 通常モード</span>
-  </div>
+  <form id="reservationForm">
+    <label for="date">予約日</label>
+    <input type="date" id="date" required>
 
-  <div id="adminPanel" class="admin-panel">
-    <h2>予約一覧</h2>
-    <ul id="reservationList"></ul>
-  </div>
+    <label for="name">お名前</label>
+    <input type="text" id="name" placeholder="山田 太郎" required>
 
-  <label for="month">月選択:</label>
-  <select id="month"></select>
-  <select id="year"></select>
-  <button onclick="updateCalendar()">表示</button>
+    <label for="phone">電話番号</label>
+    <input type="tel" id="phone" placeholder="090-1234-5678" required>
 
-  <table id="calendar"></table>
+    <label for="email">メールアドレス</label>
+    <input type="email" id="email" placeholder="sample@example.com" required>
 
-  <div class="form-container" id="reservationForm">
-    <h2>予約情報の入力</h2>
-    <p id="selectedDateDisplay"></p>
-    <input type="text" id="name" placeholder="お名前" required>
-    <input type="tel" id="phone" placeholder="電話番号" required>
-    <input type="email" id="email" placeholder="メールアドレス" required>
-    <button onclick="submitReservation()">予約を確定する</button>
-    <p class="notice">※こちらの予約は仮予約となります。予約の確定につきましては登録いただいたメールアドレスもしくは電話番号宛に連絡をいたします。</p>
-  </div>
+    <button type="submit">予約する</button>
+  </form>
+
+  <p class="notice">※この予約は仮予約です。確定の連絡は後日メールまたはお電話でご案内いたします。</p>
 
   <script>
-    const apiUrl = "https://script.google.com/macros/s/AKfycbzvbBhNLLoUeFlF8DFj-Dv43jakC3nSiKlZSM3NjqoTyLK-H6iiArR4pldeek3KY-t0/exec";
-    let reservedDates = [];
-    let reservations = [];
-    let selectedDate = null;
-    let adminMode = false;
-    const adminPassword = "1135";
+    const scriptURL = "https://script.google.com/macros/s/AKfycbzvbBhNLLoUeFlF8DFj-Dv43jakC3nSiKlZSM3NjqoTyLK-H6iiArR4pldeek3KY-t0/exec";
 
-    async function fetchReservations() {
-      try {
-        const response = await fetch(apiUrl);
-        const data = await response.json();
-        reservations = data;
-        reservedDates = data.map(item => item.date);
-      } catch (error) {
-        console.error("予約情報の取得に失敗しました:", error);
-      }
-    }
+    document.getElementById("reservationForm").addEventListener("submit", async (e) => {
+      e.preventDefault();
 
-    function formatDate(date) {
-      const offset = date.getTimezoneOffset() * 60000;
-      return new Date(date.getTime() - offset).toISOString().split('T')[0];
-    }
-
-    async function generateCalendar(year, month) {
-      await fetchReservations();
-      const table = document.getElementById("calendar");
-      table.innerHTML = "";
-      const date = new Date(year, month - 1, 1);
-      const daysInMonth = new Date(year, month, 0).getDate();
-
-      let row = table.insertRow();
-      for (let i = 1; i <= daysInMonth; i++) {
-        const currentDate = new Date(year, month - 1, i);
-        const formatted = formatDate(currentDate);
-        const cell = row.insertCell();
-
-        if (reservedDates.includes(formatted)) {
-          cell.innerHTML = `${i}日<br><span class="reserved">×</span>`;
-        } else {
-          cell.innerHTML = `${i}日<br><span class="clickable">〇</span>`;
-          cell.onclick = () => {
-            selectedDate = formatted;
-            document.getElementById("reservationForm").style.display = "block";
-            document.getElementById("selectedDateDisplay").innerText = `選択した日付: ${formatted}`;
-          };
-        }
-
-        if ((i + date.getDay()) % 7 === 0) {
-          row = table.insertRow();
-        }
-      }
-
-      if (adminMode) updateReservationList();
-    }
-
-    function updateCalendar() {
-      const year = parseInt(document.getElementById("year").value);
-      const month = parseInt(document.getElementById("month").value);
-      document.getElementById("reservationForm").style.display = "none";
-      generateCalendar(year, month);
-    }
-
-    async function submitReservation() {
-      const name = document.getElementById("name").value.trim();
-      const phone = document.getElementById("phone").value.trim();
-      const email = document.getElementById("email").value.trim();
-
-      if (!name || !phone || !email) {
-        alert("全ての項目を入力してください。\n");
-        return;
-      }
+      const data = {
+        date: document.getElementById("date").value,
+        name: document.getElementById("name").value,
+        phone: document.getElementById("phone").value,
+        email: document.getElementById("email").value
+      };
 
       try {
-        await fetch(apiUrl, {
+        const res = await fetch(scriptURL, {
           method: "POST",
-          body: JSON.stringify({ date: selectedDate, name, phone, email }),
-          headers: { "Content-Type": "application/json" }
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify(data)
         });
 
-        alert("予約完了しました！");
-        document.getElementById("reservationForm").style.display = "none";
-        generateCalendar(parseInt(document.getElementById("year").value), parseInt(document.getElementById("month").value));
+        if (res.ok) {
+          alert("予約を受け付けました！\n後ほどご連絡いたします。");
+          document.getElementById("reservationForm").reset();
+        } else {
+          alert("予約に失敗しました。もう一度お試しください。");
+        }
       } catch (error) {
-        alert("予約に失敗しました。もう一度試してください。");
+        console.error("送信エラー:", error);
+        alert("通信エラーが発生しました。");
       }
-    }
-
-    function toggleAdminMode() {
-      const inputPass = document.getElementById("adminPass").value;
-      if (inputPass === adminPassword) {
-        adminMode = !adminMode;
-        document.getElementById("adminStatus").innerText = adminMode ? "現在: 管理モード" : "現在: 通常モード";
-        document.getElementById("adminPanel").style.display = adminMode ? "block" : "none";
-        updateCalendar();
-      } else {
-        alert("パスワードが間違っています。管理モードに入れません。");
-      }
-    }
-
-    function updateReservationList() {
-      const list = document.getElementById("reservationList");
-      list.innerHTML = "";
-      reservations.forEach(res => {
-        const item = document.createElement("li");
-        item.textContent = `${res.date} - ${res.name}（${res.phone}, ${res.email}）`;
-        list.appendChild(item);
-      });
-    }
-
-    function initSelectors() {
-      const monthSelect = document.getElementById("month");
-      const yearSelect = document.getElementById("year");
-      for (let m = 1; m <= 12; m++) {
-        const option = document.createElement("option");
-        option.value = m;
-        option.text = `${m}月`;
-        monthSelect.appendChild(option);
-      }
-      const thisYear = new Date().getFullYear();
-      for (let y = thisYear - 1; y <= thisYear + 2; y++) {
-        const option = document.createElement("option");
-        option.value = y;
-        option.text = `${y}年`;
-        yearSelect.appendChild(option);
-      }
-      monthSelect.value = 4;
-      yearSelect.value = 2025;
-    }
-
-    initSelectors();
-    generateCalendar(2025, 4);
+    });
   </script>
 </body>
 </html>
