--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -13,14 +14,14 @@
     <label>電話番号: <input type="tel" id="phone" required></label><br>
     <label>メール: <input type="email" id="email" required></label><br>
     <label>備考: <textarea id="note"></textarea></label><br>
-    <button type="submit">予約を確定する</button>
+    <button type="button" onclick="submitReservation()">予約を確定する</button>
   </form>
 
   <script>
-    document.getElementById("reservationForm").addEventListener("submit", async function(e) {
-      e.preventDefault();
+    const apiUrl = "https://script.google.com/macros/s/AKfycbw5qQsJGWacMm2dgRtyFaozKfFwArHE90SZ0gPaZ3xba_Q5mk0oNBknZKOn_lchCG_S/exec";
 
-      const payload = {
+    async function submitReservation() {
+      const data = {
         startDate: document.getElementById("startDate").value,
         endDate: document.getElementById("endDate").value,
         name: document.getElementById("name").value,
@@ -30,21 +31,18 @@
       };
 
       try {
-        const response = await fetch('https://script.google.com/macros/s/AKfycbwRivoMd5VOsQjilh1fs9rx0ZS5UYJvG1dpP8pyid3daBDXcBLb5mQleeJQXlM86zFV/exec', {
+        const response = await fetch(apiUrl, {
           method: "POST",
-          headers: {
-            "Content-Type": "application/json"
-          },
-          body: JSON.stringify(payload),
-          mode: "cors"
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify(data)
         });
 
         const text = await response.text();
-        alert("サーバーからの応答: " + text);
+        alert("送信結果: " + text);
       } catch (error) {
-        alert("予約送信中にエラーが発生しました: " + error);
+        alert("送信エラー: " + error);
       }
-    });
+    }
   </script>
 </body>
 </html>
